--- a/index.html
+++ b/index.html
@@ -1,11 +1,195 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Data Calon Mahasiswa</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>LINTANG</h1>
+<div class="container mt-5">
+    <h2 class="text-center">Data Calon Mahasiswa</h2>
+    <button class="btn btn-success mb-3" data-bs-toggle="modal" data-bs-target="#addModal">Tambah Data</button>
+
+    <table class="table table-bordered">
+        <thead>
+        <tr>
+            <th>NIS</th>
+            <th>Nama</th>
+            <th>Jenis Kelamin</th>
+            <th>Telepon</th>
+            <th>Alamat</th>
+            <th>Photo</th>
+            <th>File Pendukung</th>
+            <th>Aksi</th>
+        </tr>
+        </thead>
+        <tbody>
+        <?php
+        include 'koneksi.php';
+        $query = mysqli_query($koneksi, "SELECT*FROM calon_mhs");
+        while ($data = mysqli_fetch_assoc($query)) { ?>
+            <tr>
+                <td><?= $data['nis']; ?></td>
+                <td><?= $data['nama']; ?></td>
+                <td><?= $data['jk']; ?></td>
+                <td><?= $data['telepon']; ?></td>
+                <td><?= $data['alamat']; ?></td>
+                <td><img src="uploads/<?= $data['photo']; ?>" alt="photo" width="100"></td>
+                <td><a href="uploads/<?= $data['file_pendukung']; ?>" target="_blank">Download</a></td>
+                <td>
+                    <button class="btn btn-warning btn-edit"
+                            data-nis="<?= $data['nis']; ?>"
+                            data-nama="<?= $data['nama']; ?>"
+                            data-jk="<?= $data['jk']; ?>"
+                            data-telepon="<?= $data['telepon']; ?>"
+                            data-alamat="<?= $data['alamat']; ?>"
+                            data-photo="<?= $data['photo']; ?>"
+                            data-file_pendukung="<?= $data['file_pendukung']; ?>">
+                        Edit
+                    </button>
+                    <a href="hapus.php?nis=<?= $data['nis']; ?>" class="btn btn-danger btn-sm" onclick="return
+                        confirm('Yakin ingin menghapus data ini?')">Hapus</a>
+
+                </td>
+            </tr>
+<?php 
+}
+?>
+        </tbody>
+    </table>
+</div>
+<div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form method="POST" action="tambah.php" enctype="multipart/form-data">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addModalLabel">Tambah Data</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="nis" class="form-label">NIS</label>
+                        <input type="text" class="form-control" id="nis" name="nis" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="nama" class="form-label">Nama</label>
+                        <input type="text" class="form-control" id="nama" name="nama" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="jk" class="form-label">Jenis Kelamin</label>
+                        <select class="form-select" id="jk" name="jk" required>
+                            <option value="Laki-laki">Laki-laki</option>
+                            <option value="Perempuan">Perempuan</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="telepon" class="form-label">Telepon</label>
+                        <input type="text" class="form-control" id="telepon" name="telepon" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="alamat" class="form-label">Alamat</label>
+                        <textarea class="form-control" id="alamat" name="alamat" required></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label for="photo" class="form-label">Photo</label>
+                        <input type="file" class="form-control" id="photo" name="photo" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="file_pendukung" class="form-label">File Pendukung</label>
+                        <input type="file" class="form-control" id="file_pendukung" name="file_pendukung" required>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
+                    <button type="submit" class="btn btn-primary">Simpan</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="editModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+        <form method="POST" action="ubah.php" enctype="multipart/form-data">
+        <script>
+document.querySelectorAll('.btn-edit').forEach(button => {
+    button.addEventListener('click', function () {
+        document.getElementById('editNis').value = this.dataset.nis;
+        document.getElementById('editNama').value = this.dataset.nama;
+        document.getElementById('editJk').value = this.dataset.jk;
+        document.getElementById('editTelepon').value = this.dataset.telepon;
+        document.getElementById('editAlamat').value = this.dataset.alamat;
+
+        const photoPath = this.dataset.photo ? `uploads/${this.dataset.photo}` : '';
+        const photoPreview = document.getElementById('editphotoPreview');
+        photoPreview.src = photoPath;
+        photoPreview.style.display = photoPath ? 'block' : 'none';
+
+        const filePath = this.dataset.file_pendukung ? `uploads/${this.dataset.file_pendukung}` : '';
+        const filePreview = document.getElementById('editFilePreview');
+        filePreview.href = filePath;
+        filePreview.style.display = filePath ? 'inline-block' : 'none';
+
+        new bootstrap.Modal(document.getElementById('editModal')).show();
+    });
+});
+</script>
+
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit Data</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <input type="hidden" id="editNis" name="nis">
+
+                    <div class="mb-3">
+                        <label for="editNama" class="form-label">Nama</label>
+                        <input type="text" class="form-control" id="editNama" name="nama" required>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="editJk" class="form-label">Jenis Kelamin</label>
+                        <select class="form-select" id="editJk" name="jk" required>
+                            <option value="Laki-laki">Laki-laki</option>
+                            <option value="Perempuan">Perempuan</option>
+                        </select>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="editTelepon" class="form-label">Telepon</label>
+                        <input type="text" class="form-control" id="editTelepon" name="telepon" required>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="editAlamat" class="form-label">Alamat</label>
+                        <textarea class="form-control" id="editAlamat" name="alamat" required></textarea>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="editphoto" class="form-label">photo Saat Ini</label><br>
+                        <img id="editphotoPreview" src="" alt="photo" width="150" class="mb-3 border rounded"><br>
+                        <label for="editphoto" class="form-label">Ganti Photo</label>
+                        <input type="file" class="form-control" id="editphoto" name="photo">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="editFilePendukung" class="form-label">File Pendukung Saat Ini</label><br>
+                        <a id="editFilePreview" href="#" target="_blank" class="btn btn-primary mb-3">Lihat File</a><br>
+                        <label for="editFilePendukung" class="form-label">Ganti File Pendukung</label>
+                        <input type="file" class="form-control" id="editFilePendukung" name="file_pendukung">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">Simpan</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Batal</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
